--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="movie-container" id="trending-movies"></div>
     </section>
 
-  
+    <script src="SCRIPT/config.js"></script>
     <script src="SCRIPT/script.js"></script>
     <script src="SCRIPT/theme.js"></script>
 
