--- a/movieDetails.html
+++ b/movieDetails.html
@@ -37,6 +37,7 @@
         <div id="watch-providers"></div>
     </div>
 
+    <script src="SCRIPT/config.js"></script>
     <script src="SCRIPT/movieDetails.js"></script>
     <script src="SCRIPT/theme.js"></script>
 
