--- a/searchResults.html
+++ b/searchResults.html
@@ -16,6 +16,7 @@
 
     <div id="movies"></div>
 
+    <script src="SCRIPT/config.js"></script>
     <script src="SCRIPT/searchResult.js"></script>
     <script src="SCRIPT/theme.js"></script>
 
